Added Maven Depencies

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: OldEnchant
 main: me.varmetek.oldenchant.OldEnchantPlugin
-version: 1.0.0
+version: ${project.version}
 description: An enchantment plugin made by Varmetek
 authors:
   - Varmetek
+  - FurkanZhlp
